After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766521 - rtpdec: fix clock leak
rtpdec: fix clock leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal minor
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-16 15:33 UTC by Guillaume Desmottes
Modified: 2016-10-31 14:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpdec: fix clock leak (775 bytes, patch)
2016-05-16 15:33 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-16 15:33:23 UTC
.
Comment 1 Guillaume Desmottes 2016-05-16 15:33:41 UTC
Created attachment 327987 [details] [review]
rtpdec: fix clock leak

gst_system_clock_obtain() returns a new ref.
Comment 2 Sebastian Dröge (slomo) 2016-05-17 06:59:32 UTC
Attachment 327987 [details] pushed as a6c4763 - rtpdec: fix clock leak
Comment 3 Sebastian Dröge (slomo) 2016-05-17 07:00:20 UTC
How did you find this? rtpdec is not used by anything, it might make sense to even remove it :)
Comment 4 Guillaume Desmottes 2016-05-17 09:41:52 UTC
With this test ./tests/check/generic/states.c :)